Fix bug with jumping sidebar

--- a/src/spa/content/content.component.css
+++ b/src/spa/content/content.component.css
@@ -1,17 +1,16 @@
 :host {
+  position: relative;
   display: flex;
   flex-shrink: 1;
   overflow-x: hidden;
-  overflow-y: auto;
+  /* overflow-y: auto; */
   height: 100vh;
 }
 
+/* .mat-sidenav {} */
+
 .body-style {
-  display: flex;
-  flex-wrap: wrap;
   padding: 0 5vw;
-  flex-grow: 1;
-  width: 100vw;
 }
 
 .dropup {
