--- a/src/spa/footer/footer.component.css
+++ b/src/spa/footer/footer.component.css
@@ -1,10 +1,16 @@
 :host {
     min-height: 30px;
     background-color: #16484b;
+    float: right;
+    width: 100%;
+    left: 0;
 }
-
+mat-toolbar {
+    /* margin-left: -258px; */
+    /* margin-right: -258px; */
+    z-index: 100;
+}
 div {
     margin: 5;
-    float: right;
     color: #ddd;
 }
