--- a/src/spa/header/header.component.css
+++ b/src/spa/header/header.component.css
@@ -1,3 +1,9 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+mat-toolbar {
+  position: sticky;
+  position: -webkit-sticky; /* For macOS/iOS Safari */
+  top: 0; /* Sets the sticky toolbar to be on top */
+  z-index: 1000;
+}
